# riptide_control

./: .gitignore  .gitmodules  README.md
riptide_alloc_controller/: CMakeLists.txt  package.xml
riptide_alloc_controller/include/riptide_alloc_controller/: allocated_controller.hpp
riptide_alloc_controller/simulink_generated_files/include/: FaultControllerModel.h  FaultControllerModel_private.h  FaultControllerModel_types.h  Porportional_Follower_Test.h  Porportional_Follower_Test_private.h  Porportional_Follower_Test_types.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
riptide_alloc_controller/src/: allocated_controller.cpp  controller.cpp
riptide_controllers/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
riptide_controllers/config/: talos_autoff.yaml
riptide_controllers/include/riptide_controllers2/: profiler.hpp
riptide_controllers/launch/: control_system.launch.py  controller.launch.py  solver.launch.py  teleop.launch.py  thruster_cal_launch.py  thruster_test.launch.py
riptide_controllers/models/: FeedForwardAutoTune.slx  arm_cfg.m  attach_configs_to_model.m  drag_util.asv  drag_util.m  generate_cpp_packages.m  generate_cpp_packages.py  model_manager.py  refresh_custom_msgs.m  x86_cfg.m
riptide_controllers/models/DiagnosticMonitor/: DiagnosticTester.slx  untitled1.slx
riptide_controllers/models/active_control/: ActiveControl.slx  PID.slx  PID.slx.autosave  PID.slx.original  PID_Controller_Subsystem.slx  SMC.slx  SMC.slx.autosave  SMC.slx.original  SMC.slx.r2022b  SMC_Subsystem.slx  Tranfsform_Linear_Gains_To_World.slx  Tranfsform_Linear_Gains_To_World.slx.autosave  active_control.slx  generate_motion_profile.m  profiler_matlab_interface.cpp  quatError  test_profiler_int.m
riptide_controllers/models/active_control/resources/AngularError/: AngularTest.m
riptide_controllers/models/active_control/resources/Radial Curve Fitter Demo/: evalCurve.m  fitCurve.m  radialCurves.m
riptide_controllers/models/active_control/resources/fitDrag/: fitDrag.asv  fitDrag.m  fitDragCurves.asv  fitDragCurves.m
riptide_controllers/models/active_control/resources/simpleProfiler/: createMotionCurveTests.asv  createMotionCurveTests.m
riptide_controllers/models/active_control/src/pid/: CMakeLists.txt  package.xml  packageInfo.mat
riptide_controllers/models/active_control/src/smc/: CMakeLists.txt  package.xml  packageInfo.mat
riptide_controllers/models/complete_system/: complete_controller.slx  send_thruster_cmd.h
riptide_controllers/models/ff_control/: FF_Controller.slx
riptide_controllers/models/liltank_controller/: liltank_controller.slx  liltank_controller.slx.r2023a  quat_bus_to_vector.m  quat_to_yaw.m
riptide_controllers/models/referenced_models/: AppliedForceScale.slx  Auto_FF_Scale_Processor.slx  Diagnostic_Reporter.slx  Disable_Gains.slx  Drag_Compensator_mk1.slx  Drag_Force.slx  FeedForwardAutoTune.slx  Normalize_Pose_Error.slx  PID_Mathmatical.slx  Publish_Control_System_Out.slx  SMC_mathmatical.slx  SuppressNans.slx  Thruster_Solver_Mathmatical.slx  Track_Drag_Coefficents.slx  Tranfsform_Linear_Gains_To_World.slx  Velocity_Profiles.slx
riptide_controllers/models/resources/project/1bR9rQULOZHQxeBnOZZbhFDxZwI/: 9Dd1fZqo3DaA4cwM9V5SKo6uBH8p.xml  _iugteYZpDzTT-BOFhidLAD0pewp.xml
riptide_controllers/models/resources/project/A8jkJoL7IyPV-rqomq_NquAO9Is/: TFFNttCxruZf0fhQvPsdG61DKLcp.xml  nOXjxFGsTcwSCOzLI5JL27gysckp.xml  xJc4H_YuLVChRmqQgd4mbTrO6hUp.xml  xggZgqCZxxBVGrqS2AzQofjVR3Yp.xml
riptide_controllers/models/resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: 6MNldGYB38EjEywbUDRWIgXlaP4d.xml  6MNldGYB38EjEywbUDRWIgXlaP4p.xml  8XgtSy3oiR32CeCFgcpaw9sTulYd.xml  8XgtSy3oiR32CeCFgcpaw9sTulYp.xml  8hHWwhyeJHj74mU8YPVabqrKl_cd.xml  8hHWwhyeJHj74mU8YPVabqrKl_cp.xml  Os6FYVtn-1St6JdogVq1CMAQwB4d.xml  Os6FYVtn-1St6JdogVq1CMAQwB4p.xml  _MzatM4IAcITAKxHN2MwqwLQ3_cp.xml  ucg3FcapNc1aDNCuUp7Ic1v6rtQd.xml  ucg3FcapNc1aDNCuUp7Ic1v6rtQp.xml
riptide_controllers/models/resources/project/NTCF3qea47eVDfVAFVSpyY2mf00/: 4ofXEzGsmlr89wZh4OmT7iyCDvEp.xml  ANDs1HGoPXEnXDxMwuHFzQD3RqQp.xml  G7kRVJU61o_brUycSRDwrUShMZop.xml
riptide_controllers/models/resources/project/jikZ-3B9GEdwdzITM-4pxMccmVU/: FR4ht-giW-NmaHKMA6lbmMoyHwIp.xml  cdsw2Kdm7blQ4jJJkuHJDykA1Y0p.xml
riptide_controllers/models/resources/project/m3YgPVyjrlXZqNsM_LtvaCQJ2Po/: 0UWVNhVoy25Wv5dKPnmETNK7zfcp.xml  2tXkfwoh7wuKJXMf6USeLSCfiPEp.xml  3daqvWpGVEAzcKyFgxGGvND30-Yp.xml  4Pe0LVurBHrO-hoy6j-pst9kkbMp.xml  (+11 more)
riptide_controllers/models/thruster_solver/: CreateWeights.m  ThrusterSolver.slx  ThrusterSolver.slx.r2022b  Thruster_Solver_Subsystem.slx  send_thruster_cmd.m  send_thruster_cmd_canbus.c  thruster_solver.slx  thruster_solver.slx.autosave  thruster_solver.slx.r2022b
riptide_controllers/resource/: tuning_plotjuggler.xml
riptide_controllers/riptide_controllers2/: Controllers.py  controllerOverseer.py  controller_working.py  thruster_solver.py  thruster_wrench_publisher.py
riptide_controllers/riptide_controllers2/actions/: calculate_wrench.py  calibrate_drag.py  calibrate_drag_new.py  calibrate_thruster.py  load_cell_reader.py  thruster_test_dshot.py  thruster_test_old.py  wrench_calc.py
riptide_controllers/src/riptide_controllers/: RocketLeague.py  calibrate_drag.py  controller_overseer.cpp  controller_overseer.py  liltank_teleop.py  load_cell_reader.py  main.cpp  overseer_6dof_teleop_plugin.py  overseer_autotune_plugin.py  overseer_ff_plugin.py  overseer_global_defs.py  overseer_thruster_solver_plugin.py  rocketLeauge.py  talos_teleop.py  test.py  thruster_test_dshot.py
riptide_controllers/src/riptide_controllers2/: controller_working.py  thruster_solver.py  trajectory_tester.py
riptide_controllers/src/riptide_controllers2/actions/: calibrate_buoyancy.py
riptide_controllers/test/riptide_controllers/: test_overseer.py
riptide_teleop/: Readme.md  package.xml  setup.cfg  setup.py
riptide_teleop/launch/: keyboard_teleop.launch.py  ps3_teleop.launch.py  xbox_teleop_local.launch.py
riptide_teleop/riptide_teleop2/: keyboard_teleop.py  ps3_teleop.py  xbox_teleop.py
(+86 files in other folders)
