<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_alloc_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tucker.737@osu.edu">Cole Tucker</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>riptide_msgs2</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
