<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_controllers2</name>
  <version>0.0.1</version>
  <description>Package to store all code relating to the control of OSU's AUV.</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/osu-uwrt/riptide_controllers</url>
  <url type="website">http://wiki.ros.org/riptide_controllers</url>

  <author>Blaine Miller</author>
  <author>Mitchell Sayre</author>

  <build_depend>libceres-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>imu_3dm_gx4</build_depend> -->
  <build_depend>riptide_msgs2</build_depend>
  <build_depend>rclcpp</build_depend>
  <!-- <build_depend>roslint</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf_transformations</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>riptide_msgs2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
